Creation of API gateway

--- a/draft1.html
+++ b/draft1.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="./JKSSGateway.js"></script>
 <!--  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
@@ -88,6 +89,16 @@
     <div>
       <!--<button onclick="validateFileDimensions">Submit</button> -->
   </form></center>
+</div>
+
+<div class="container-fluid bg-2 text-center">
+  <h1 class="margin">Results from Picture:</h1>
+  <p id="JKSSResponse"></p>
+  <script> 
+    // TODO: Use Image from upload for API call here
+    const JKSS = new JKSSGateway();
+    document.getElementById("JKSSResponse").innerHTML = JKSS.baseURL;
+  </script>
 </div>
 
 
